Fixed grid spacing on user page

--- a/mern/client/src/components/css/Grid.css
+++ b/mern/client/src/components/css/Grid.css
@@ -2,6 +2,5 @@
     display: grid;  
     grid-gap: 20px;
     justify-content: space-around;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); 
-    grid-template-rows: auto auto auto; 
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); 
 }
